feat:added footer and chnage p tags font family

--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,16 @@
   .img-shadow {
     filter: drop-shadow(-6px 6px 10px rgba(0, 0, 0, 0.4));
   }
+
+  .footer-link {
+    @apply hover:underline hover:text-darkGreen duration-200;
+  }
+
+  .footer-link {
+    @apply flex items-center gap-2;
+  }
+
+  p {
+    @apply font-serif;
+  }
 }
